# samjameswilliams

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  zensical.toml
.doctrees/: environment.pickle  index.doctree
.doctrees/Bible_notes/: index.doctree
.doctrees/books/: thinking_the_unthinkable.doctree
.doctrees/civil_eng/: index.doctree  links.doctree
.doctrees/code/: cmd_touch.doctree  git_commit_vi.doctree  git_tips.doctree  index.doctree  learning_rust.doctree  links.doctree  passwords.doctree  python _adoption _in _engineering.doctree  rust_notes.doctree  tdd.doctree  wogo.doctree
.doctrees/diy/: index.doctree  vauxhall_intellilink_audio_fix.doctree
.doctrees/maths/: index.doctree  log_graph.doctree
.doctrees/sermons/: Ecc1-2.doctree  Ecc3.doctree  Ecc4-5a.doctree  Ecc4-5b.doctree  Ecc5c.doctree  Ecc7a.doctree  Ecc7b.doctree  (+1 more)
Bible_notes/: index.html
_sources/: index.rst.txt
books/: thinking_the_unthinkable.html
civil_eng/: index.html  links.html
code/: cmd_touch.html  git_commit_vi.html  git_tips.html  index.html  learning_rust.html  links.html  passwords.html  python _adoption _in _engineering.html  rust_notes.html  tdd.html  wogo.html
diy/: index.html  vauxhall_intellilink_audio_fix.html
docs/: index.md  index.rst
maths/: index.html  log_graph.html
sermons/: Ecc1-2.html  Ecc3.html  Ecc4-5a.html  Ecc4-5b.html  Ecc5c.html  Ecc7a.html  Ecc7b.html  index.html
site/: 404.html  conf.py  index.html  search.json
spiritual/: rachs_funeral.html  weaknesses.html
(+922 files in other folders)
