[project]
name = "sams-notes"
version = "0.1.0"
description = "A repo for my faith and work related notes"
authors = [{ name = "samjameswilliams", email = "samjameswilliams1985@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "zensical>=0.0.31",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
